--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -50,7 +50,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form action="/login" method="POST">
+        <form id="loginForm"action="/login" method="POST">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             
@@ -60,5 +60,6 @@
             <input type="submit" value="Login">
         </form>
     </div>
+    <script src="../scripts/login.js"></script>
 </body>
 </html>
