--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -18,7 +18,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">User</a>
+                    <a class="nav-link" id="user" href="#">User</a>
+                </li>
+                <li class="nav-item">
+                    <button id="logout" class="btn btn-primary">Log out</button>
                 </li>
                 <li class="nav-item">
                    <img src="" alt="">
@@ -33,7 +36,8 @@
     <div class="sidebar" id="sidebar">
         <button class="btn btn-primary" id="menuButton">☰</button>
         <div class="canvas-menu" id="canvasMenu">
-            <span>Scores</span>
+            <span><a href="scores.html">Scores</a></span>
+            
         </div>
     </div>
 
