--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -50,7 +50,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form id="loginForm"action="/login" method="POST">
+        <form id="loginForm"action="/login" id="loginForm" method="POST">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             
