--- a/client/pages/profile.html
+++ b/client/pages/profile.html
@@ -50,6 +50,26 @@
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">PyGame</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" id="user" href="#">User</a>
+                </li>
+                <li class="nav-item">
+                    <button id="logout" class="btn btn-primary">Log out</button>
+                </li>
+                <li class="nav-item">
+                   <img src="" alt="">
+                </li>
+              
+            </ul>
+        </div>
+    </nav>
     <div class="profile-container">
         <h2>Edit Profile</h2>
         <form action="/profile" method="POST" enctype="multipart/form-data">
