--- a/client/pages/quiz.html
+++ b/client/pages/quiz.html
@@ -9,7 +9,15 @@
 </head>
 <body>
  
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="home.html">PyGame</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          
+        </div>
+    </nav>
     <div class="container mt-5">
         <div class="timer" id="timer">Time left: 30s</div>
         <div class="quiz-container" id="quizContainer">
