--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" id="user" href="#">User</a>
+                    <a class="nav-link" id="user" href="profile.html">User</a>
                 </li>
                 <li class="nav-item">
                     <button id="logout" class="btn btn-primary">Log out</button>
