--- a/client/pages/profile.html
+++ b/client/pages/profile.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
         }
         .profile-container {
@@ -19,7 +17,9 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 400px;
+            width: 100%;
+            max-width: 500px;
+            margin: 20px auto;
         }
         .profile-container h2 {
             text-align: center;
@@ -47,51 +47,54 @@
         .profile-container input[type="submit"]:hover {
             background-color: #45a049;
         }
+        .navbar-brand img {
+            height: 40px;
+            width: auto;
+        }
     </style>
 </head>
 <body>
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">PyGame</a>
+        <a class="navbar-brand" href="home.html">PyGame</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" id="user" href="#">User</a>
-                </li>
-                <li class="nav-item">
-                    <button id="logout" class="btn btn-primary">Log out</button>
-                </li>
-                <li class="nav-item">
-                   <img src="" alt="">
-                </li>
-              
-            </ul>
+            
         </div>
     </nav>
-    <div class="profile-container">
-        <h2>Edit Profile</h2>
-        <form action="/profile" method="POST" enctype="multipart/form-data">
-            <label for="profile-photo">Profile Photo:</label>
-            <input type="file" id="profile-photo" name="profile-photo" accept="image/*" required>
 
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+    <!-- Profile Container -->
+    <div class="container">
+        <div class="profile-container">
+            <h2>Edit Profile</h2>
+            <form action="/profile" method="POST" enctype="multipart/form-data">
+                <label for="profile-photo">Profile Photo:</label>
+                <input type="file" id="profile-photo" name="profile-photo" accept="image/*" required>
 
-            <label for="dob">Date of Birth:</label>
-            <input type="date" id="dob" name="dob" required>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
 
-            <label for="sex">Sex:</label>
-            <select id="sex" name="sex" required>
-                <option value="">Select</option>
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
-            </select>
+                <label for="dob">Date of Birth:</label>
+                <input type="date" id="dob" name="dob" required>
 
-            <input type="submit" value="Save">
-        </form>
+                <label for="sex">Sex:</label>
+                <select id="sex" name="sex" required>
+                    <option value="">Select</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="other">Other</option>
+                </select>
+
+                <input type="submit" value="Save">
+            </form>
+        </div>
     </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
