--- a/client/pages/scores.html
+++ b/client/pages/scores.html
@@ -8,36 +8,42 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="home.html">PyGame</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-           
+            <!-- Additional Navbar content can go here -->
         </div>
     </nav>
+
+    <!-- Main Container -->
     <div class="container mt-5">
         <h1 class="mb-4">User Scores</h1>
 
         <!-- Table for displaying scores -->
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <!-- <th>Quiz ID</th>
-                    <th>Score</th> -->
-                </tr>
-            </thead>
-            <tbody id="scores-table-body">
-                <!-- Scores will be injected here by JavaScript -->
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Quiz ID</th>
+                        <th>Score</th>
+                    </tr>
+                </thead>
+                <tbody id="scores-table-body">
+                    <!-- Scores will be injected here by JavaScript -->
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <!-- JavaScript and Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Fetch and display scores -->
     <script src="../scripts/scores.js"></script>
-    </body>
+</body>
+</html>
