--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -15,7 +15,7 @@
             margin: 0;
         }
         .login-container {
-            background-color: #fff;
+            background-color: #a2a3a8;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
