--- a/client/pages/signup.html
+++ b/client/pages/signup.html
@@ -8,13 +8,13 @@
     <title>Sign Up</title>
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #A9A9A9;
         }
         .container {
             max-width: 500px;
             margin-top: 50px;
             padding: 20px;
-            background-color: #fff;
+            background-color: #a2a3a8;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
