--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Login</button>
-                <span class="mt-2">Don't have an account ? <a href="signup.html">Create Account</a></span>
+                <span class="mt-2">Don't have an account ? <a href="/client/pages/signup.html">Create Account</a></span>
             </form>
         </div>
     </div>
