--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -55,6 +55,76 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="../scripts/login.js"></script>
+    <script >
+
+
+document.addEventListener('DOMContentLoaded', () => {
+    const form = document.getElementById('loginForm');
+    form.addEventListener('submit', handleSubmit);
+});
+
+function validateForm() {
+    const form = document.getElementById('loginForm');
+    const username = form.username.value.trim();
+    const password = form.password.value.trim();
+
+    if (!username || !password) {
+        alert('All fields are required.');
+        return false;
+    }
+
+    if (password.length < 6) {
+        alert('Password must be at least 6 characters long.');
+        return false;
+    }
+
+    return true;
+}
+
+function handleSubmit(event) {
+    event.preventDefault(); 
+
+    if (!validateForm()) {
+        return;
+    }
+
+    const form = document.getElementById('loginForm');
+    const username = form.username.value.trim();
+    const password = form.password.value.trim();
+
+    Login(username, password);
+}
+function Login(username, password) {
+    const configurationObject = {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json",
+            "Accept": "application/json"
+        },
+        body: JSON.stringify({
+            username: username,
+            password: password
+        })
+    };
+    
+    fetch('https://pygame-6.onrender.com/login', configurationObject)
+        .then(response => response.json())
+        .then(json => {
+            if (json.errors) {
+                // Handle login failure
+                alert('Login failed. Please check your credentials.');
+            } else {
+                // Store the JWT token in localStorage
+                localStorage.setItem('access_token', json.access_token);
+                window.location.href = 'home.html';
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            alert('Login failed. Please try again.');
+        });
+}
+
+    </script>
 </body>
 </html>
