--- a/client/pages/signup.html
+++ b/client/pages/signup.html
@@ -47,6 +47,6 @@
         </form>
     </div>
 
-    <script src="../scripts/signup.js"></script>
+    <script src="signup.js"></script>
 </body>
 </html>
