--- a/client/pages/scores.html
+++ b/client/pages/scores.html
@@ -44,6 +44,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Fetch and display scores -->
-    <script src="../scripts/scores.js"></script>
+    <script src="scores.js"></script>
 </body>
 </html>
