--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
 
-       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <nav class="navbar navbar-expand-lg navbar-dark back-color">
         <a class="navbar-brand" href="#">PyGame</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" id="user" href="profile.html">User</a>
+                    <a class="nav-link" id="user" href="">User</a>
                 </li>
                 <li class="nav-item">
                     <button id="logout" class="btn btn-primary">Log out</button>
@@ -36,7 +36,7 @@
     <div class="sidebar" id="sidebar">
         <button class="btn btn-primary" id="menuButton">☰</button>
         <div class="canvas-menu" id="canvasMenu">
-            <span><a href="scores.html">Scores</a></span>
+            <h3 ><a class="decorate" href="scores.html">Scores</a></h3>
             
         </div>
     </div>
