--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #f2f2f2;
+            background-color: #1b1b1b;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,13 +15,14 @@
             margin: 0;
         }
         .login-container {
-            background-color: #a2a3a8;
+            background-color: #1b1d32;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .login-container h2 {
             margin-bottom: 20px;
+            color: white;
         }
         .login-container input[type="submit"] {
             background-color: #4CAF50;
@@ -31,6 +32,9 @@
         .login-container input[type="submit"]:hover {
             background-color: #45a049;
         }
+        .label-color{
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -39,15 +43,15 @@
             <h2 class="text-center">Login</h2>
             <form id="loginForm" action="/login" method="POST">
                 <div class="form-group">
-                    <label for="username">Username:</label>
+                    <label class="label-color" for="username">Username:</label>
                     <input type="text" class="form-control" id="username" name="username" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password:</label>
+                    <label class="label-color" for="password">Password:</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Login</button>
-                <span class="mt-2">Don't have an account ? <a href="signup.html">Create Account</a></span>
+                <span class="mt-2 label-color">Don't have an account ? <a href="signup.html">Create Account</a></span>
             </form>
         </div>
     </div>
