--- a/client/pages/quiz.html
+++ b/client/pages/quiz.html
@@ -25,7 +25,7 @@
 <body>
 
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark back-color">
         <a class="navbar-brand" href="home.html">PyGame</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,8 @@
                 <div class="text-center">
                     <button id="submitQuiz" class="btn btn-primary mt-3">Submit Quiz</button>
                 </div>
+                <div id="notification" class="notification hidden"></div>
+
                 <div id="score" class="mt-3 text-center">
                     <h4>Score: <span id="scoreCounter">0</span></h4>
                 </div>
