--- a/client/pages/signup.html
+++ b/client/pages/signup.html
@@ -8,15 +8,16 @@
     <title>Sign Up</title>
     <style>
         body {
-            background-color: #A9A9A9;
+            background-color: #1b1b1b;
         }
         .container {
             max-width: 500px;
             margin-top: 50px;
             padding: 20px;
-            background-color: #a2a3a8;
+            background-color: #1b1d32;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            color: white;
         }
         h1 {
             margin-bottom: 20px;
@@ -25,6 +26,7 @@
         .btn {
             width: 100%;
         }
+       
     </style>
 </head>
 <body>
